# atuin-bar

./: PLAN.md  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.beads/: config.yaml  issues.jsonl
src/: main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: atuin_integration_test.rs
