[workspace]

[package]
name = "atuin-bar"
version = "0.1.0"
description = "Spotlight-like overlay interface for atuin shell history search"
authors = []
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/atuin-bar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# This package is its own workspace root

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "atuin_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization at cost of compile time
panic = "abort"     # Reduce binary size
strip = true        # Strip symbols from binary

